--- a/style.css
+++ b/style.css
@@ -70,6 +70,13 @@ label span {
   color: #555;
 }
 
+small[data-key="codeHint"] {
+  font-size: 0.85rem;
+  color: #777;
+  margin-top: -0.5rem;
+  line-height: 1.4;
+}
+
 @media (min-width: 600px) {
   body {
     max-width: 700px;
